--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -478,6 +478,7 @@
 	}
 	.footer-nav li, .footer-nav .overlay ul li a{
 		font-size: 12px;
+		padding-top: 7px;
 	}
 	.footer-nav li a span{
 		font-size: 20px;
