--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -358,7 +358,27 @@
 		background: #fff;
 	    padding: 5px;
 	}
-
+/*重置10像素*/
+	.designer-bg, .article-bg{
+		margin-left:0.0rem;
+		margin-right:0.0rem;
+		padding:0.3125rem;
+	}
+	.designer-user img{
+		width: 100%;
+		height: 100%;
+	}
+	.designer_list{
+		margin-top: 0.3125rem;
+	}
+	.designer_list .designer-img:nth-child(n){
+    	padding-left: 0!important;
+    	padding-right: 5px!important;
+	}
+	.designer_list .designer-img:nth-child(2n){
+		padding-left: 5!important;
+    	padding-right: 0px!important;
+	}
 }
 
 @media (max-width: 500px) {
