--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -164,7 +164,8 @@
     	border-right:none;
 	}
 	.wrapper-page{
-		margin-top:10px;
+		margin-top:0.3125rem;
+		margin-bottom: 2px;
 	}
 	.sidebarWrap{
 		background: #f6f6f6;
@@ -362,11 +363,14 @@
 	.designer-bg, .article-bg{
 		margin-left:0.0rem;
 		margin-right:0.0rem;
-		padding:0.3125rem;
+		padding:0.3125rem 0.0rem;
 	}
 	.designer-user img{
 		width: 100%;
 		height: 100%;
+	}
+	.designer-item{
+		margin-bottom: 0.3125rem;
 	}
 	.designer_list{
 		margin-top: 0.3125rem;
@@ -376,8 +380,18 @@
     	padding-right: 5px!important;
 	}
 	.designer_list .designer-img:nth-child(2n){
-		padding-left: 5!important;
+		padding-left: 5px!important;
     	padding-right: 0px!important;
+	}
+	.designer-text h5 span{
+		font-size: 0.4375rem;
+	}
+	.designer-text p{
+		margin-top: 0.15625rem;
+		font-size: 0.3125rem;
+	}
+	.designer-bg .designer-text.col-md-7 .more{
+		margin-top: -3px;
 	}
 }
 
