--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -342,14 +342,14 @@
 	.s-content{
 		overflow: hidden;
 		margin-bottom: 0px;
-	}
-	.side-sub{
-		width: 100%;
+		position: relative;
+    	top: -2px;
 	}
 	.side-sub li{
 		float: left;
 	}
 	.side-sub{
+		width: 100%;
 	    padding: 0px;
 	    margin: 0px;
 	    font-size: 12px;
@@ -357,7 +357,7 @@
 	}
 	.side-sub li.active{
 		background: #fff;
-	    padding: 5px;
+	    padding:0px 5px;
 	}
 /*重置10像素*/
 	.designer-bg, .article-bg{
