--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -354,6 +354,7 @@
 	    margin: 0px;
 	    font-size: 12px;
 	    text-align: center;
+	    padding: 0px 10px;
 	}
 	.side-sub li.active{
 		background: #fff;
