--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -181,6 +181,8 @@
 		text-align: center;
 		font-weight: normal;
 		line-height: 38px;
+		color: #898989;
+		font-size: 0.375rem;
 	}
 	.sidebar-box{
 		margin-right:0px;
