--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -413,7 +413,7 @@
 	.gray-box{
 		height: 0.9375rem;
 		overflow: hidden;
-		padding: 0.0rem;
+		padding:0.0rem 0.3125rem;
 		line-height: 1.0rem;
 	}
 	.check-words{
