--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -439,6 +439,17 @@
 	  width: 100%;
 	  height: 100%;
 	}
+	.designer a{
+
+	}
+	.designer a:nth-child(n){
+    	padding-left: 0!important;
+    	padding-right: 5px!important;
+	}
+	.designer a:nth-child(2n){
+		padding-left: 5px!important;
+    	padding-right: 0px!important;
+	}
 }
 
 @media (max-width: 500px) {
