--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -337,7 +337,7 @@
 		top: 29%;
 	}
 	#fh5co-board .item{
-		margin:10px 0px 27px 0px;
+		margin:10px 0px 27px 0px!important;
 	}
 	.brandsSideBar{
 		display: none;
@@ -449,6 +449,25 @@
 	.designer a:nth-child(2n){
 		padding-left: 5px!important;
     	padding-right: 0px!important;
+	}
+	/*瀑布流*/
+	#fh5co-board .item:nth-child(n){
+		padding-left: 0!important;
+		padding-right: 5px!important;
+		overflow: hidden;
+	}
+	#fh5co-board .item:nth-child(2n){
+		padding-left: 5px!important;
+		padding-right: 0px!important;
+		overflow: hidden;
+	}
+	.column{
+	  column-count: 2;
+      column-gap: 0;
+	}
+	#fh5co-board .item{
+	 break-inside: avoid;
+     box-sizing: border-box;
 	}
 }
 
