--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -336,9 +336,6 @@
 	.ico-wrap:before{
 		top: 29%;
 	}
-	#fh5co-board .item{
-		margin:10px 0px 27px 0px!important;
-	}
 	.brandsSideBar{
 		display: none;
 	}
@@ -453,11 +450,11 @@
 	/*瀑布流*/
 	#fh5co-board .item:nth-child(n){
 		padding-left: 0!important;
-		padding-right: 5px!important;
+		padding-right: 8px!important;
 		overflow: hidden;
 	}
 	#fh5co-board .item:nth-child(2n){
-		padding-left: 5px!important;
+		padding-left: 8px!important;
 		padding-right: 0px!important;
 		overflow: hidden;
 	}
@@ -468,6 +465,7 @@
 	#fh5co-board .item{
 	 break-inside: avoid;
      box-sizing: border-box;
+     margin:0px!important;
 	}
 }
 
