--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -393,11 +393,13 @@
 	.designer_list{
 		margin-top: 0.3125rem;
 	}
-	.designer_list .designer-img:nth-child(n){
+	.designer_list .designer-img:nth-child(n),
+	.brandList li a:nth-child(n){
     	padding-left: 0!important;
     	padding-right: 5px!important;
 	}
-	.designer_list .designer-img:nth-child(2n){
+	.designer_list .designer-img:nth-child(2n),
+	.brandList li a:nth-child(2n){
 		padding-left: 5px!important;
     	padding-right: 0px!important;
 	}
