--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -393,15 +393,21 @@
 	.designer_list{
 		margin-top: 0.3125rem;
 	}
-	.designer_list .designer-img:nth-child(n),
-	.brandList li:nth-child(n) a{
+	.designer_list .designer-img:nth-child(n){
     	padding-left: 0!important;
     	padding-right: 5px!important;
 	}
-	.designer_list .designer-img:nth-child(2n),
-	.brandList li:nth-child(2n) a{
+	.designer_list .designer-img:nth-child(2n){
 		padding-left: 5px!important;
     	padding-right: 0px!important;
+	}
+	.brandList li:nth-child(n){
+    	padding-left: 10px!important;
+    	padding-right: 5px!important;
+	}
+	.brandList li:nth-child(2n){
+		padding-left: 5px!important;
+    	padding-right: 10px!important;
 	}
 	.designer-text h5 span{
 		font-size: 0.4375rem;
