--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -118,7 +118,7 @@
 		font-size: 18px;
 	}
 	.footer-nav .overlay ul li a.active{
-		color: red;
+		color: #cca76f;
 	}
 	.footer-nav li a span{
 		font-size: 30px;
