--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -489,6 +489,10 @@
 	  border-top-right-radius: 4px;
       border-top-left-radius: 4px;
 	}
+	#fh5co-board .item .fh5co-desc{
+	  border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+	}
 	.column{
 	  column-count: 2;
       column-gap: 0;
