--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -482,16 +482,17 @@
 	}
 	#fh5co-board .item .fh5co-desc{
 		width: 100%;
-     	padding: 10px;
+     	padding: 10px!important;
         background: #fff;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
 	}
 	#fh5co-board .item img{
 	  border-top-right-radius: 4px;
       border-top-left-radius: 4px;
 	}
 	#fh5co-board .item .fh5co-desc{
-	  border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
+	  
 	}
 	.column{
 	  column-count: 2;
