--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -491,9 +491,7 @@
 	  border-top-right-radius: 4px;
       border-top-left-radius: 4px;
 	}
-	#fh5co-board .item .fh5co-desc{
-	  
-	}
+
 	.column{
 	  column-count: 2;
       column-gap: 0;
@@ -502,6 +500,7 @@
 	 break-inside: avoid;
      box-sizing: border-box;
      margin:0px!important;
+     margin-bottom: 10px!important;
 	}
 }
 
