--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -476,9 +476,12 @@
 	#fh5co-board .item{
 		padding-left: 0!important;
 		padding-right: 10px!important;
+		margin:0px!important;
 		margin-bottom: 10px!important;
-    	background: none;
-		overflow: hidden;
+    	background: none!important;
+		overflow: hidden!important;
+		break-inside: avoid!important;
+	    box-sizing: border-box!important;
 	}
 	#fh5co-board .item .fh5co-desc{
 		width: 100%;
