--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -479,9 +479,9 @@
 		margin:0px!important;
 		margin-bottom: 10px!important;
     	background: none!important;
-		overflow: hidden!important;
 		break-inside: avoid!important;
 	    box-sizing: border-box!important;
+	    box-shadow:none!important;
 	}
 	#fh5co-board .item .fh5co-desc{
 		width: 100%;
@@ -489,6 +489,9 @@
         background: #fff;
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
+        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
+    	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
+    	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
 	}
 	#fh5co-board .item img{
 	  border-top-right-radius: 4px;
