--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -492,6 +492,7 @@
         -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
     	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
     	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
+    	font-size:12px;
 	}
 	#fh5co-board .item img{
 	  border-top-right-radius: 4px;
@@ -507,6 +508,16 @@
      box-sizing: border-box;
      margin:0px!important;
      margin-bottom: 10px!important;
+	}
+	.side-sub li.active a{
+		font-size:12px;
+	}
+	.swiper-wraper{
+		width: 100%;
+	}
+	.swiper-container.gallery-top img{
+		width: 100%!important;
+		height: 100%!important;
 	}
 }
 
