--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -533,7 +533,7 @@
 	}
 	.detais-content-tit{
 		margin-top: 26px;
-		min-height: 100%;
+		min-height: 100%!important;
     	padding: 10px;
 	}
 	.details-tit {
