--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -545,6 +545,12 @@
 	.detailText{
 	
 	}
+	.swiperPro .swiper-pagination-bullet{
+	  background: #999!important;
+	}
+	.mTextBody{
+		padding:0px 10px;
+	}
 }
 
 @media (max-width: 500px) {
