--- a/yimi/public/assets/css/custorm.css
+++ b/yimi/public/assets/css/custorm.css
@@ -48,6 +48,9 @@
 	margin-bottom:0;
 	margin-top:10px;
 }
+.ico-wraps .icon-question{
+	margin-left: 54px;
+}
 .hui-tit{
 	font-size:14px;
 	color:#898989;
