--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -576,6 +576,13 @@
 	.mobileIco.ico-wraps span, .mobileIco.ico-wraps img{
 	  margin-left: 82px;
 	}
+	.mLetter{
+	  margin-left: -10px;
+      margin-right: -10px;
+	}
+	.brandList li a, .brandBigImg{
+		border: 10px solid #f6f6f6!important;
+	}
 }
 
 @media (max-width: 500px) {
