--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -541,8 +541,8 @@
 	.details-share{
 		/*border-top:none;*/
 		border-bottom: none!important;
-		margin-left: 10px;
-        margin-right: 10px;
+		margin: 15px 10px 0px!important;
+		padding:0px!important;
 	}
 	.details-tit {
 	    font-size: 14px;
