--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -612,7 +612,7 @@
 	  width: 50%;
 	}
 	.other-goods{
-	  padding: 15px 0 15px 0!important;
+	  padding: 15px 10px!important;
       margin-top: 15px!important;
 	}
 }
