--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -606,7 +606,7 @@
       margin-bottom: 15px;
       font-size: 12px!important;
 	}
-	.f-left img{
+	.f-left img.eWm{
 	  width: 68px;
       margin-left: -3px;
 	}
