--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -360,13 +360,13 @@
 	}
 	.side-sub li,.side-one{
 		float: left;
-		padding-right: 10px;
+		padding-right: 30px;
 	}
 	.side-sub li.active,.side-one.active{
 		background: #fff;
 	    padding:5px;
 	    top: 5px;
-	    margin-right: 5px;
+	    margin-right: 30px;
 	}
 	.top-option{
 		margin-bottom: 0.3125rem;
@@ -587,6 +587,9 @@
 	.mobileIco.ico-wraps span, .mobileIco.ico-wraps img{
 	  margin-left: 82px;
 	}
+	.mobileIco.ico-wraps span.icon-question {
+	    margin-left: 45px;
+	}
 	.mLetter{
 	  margin-left: -10px;
       margin-right: -10px;
@@ -602,17 +605,21 @@
 		padding-top:15px!important;
 	}
 	.f-left h4{
-	  margin-top: 15px;
+	  margin-top: 11px;
       margin-bottom: 15px;
-      font-size: 12px!important;
+      font-weight: bold;
 	}
 	.f-left img.eWm{
 	  width: 68px;
       margin-left: -3px;
+      margin-top: 15px;
 	}
 	.f-left img.flogo{
 		width: 140px;
         margin-bottom: 14px;
+	}
+	.f-right dl dt{
+		padding-bottom: 14px;
 	}
 	.f-right{
 		margin-top: 63px!important;
@@ -629,6 +636,7 @@
 	}
 	.footer-bottom a{
 	  float: inherit!important;
+	  font-weight: bold;
 	}
 	.footer-bottom .text-right{
 		text-align: center!important;
@@ -646,6 +654,12 @@
 	.f-right dl.help dd a{
 		position: relative;
     	left: -23px;
+	}
+	.model-select-text{
+		display: none;
+	}
+	.help span i{
+		display: block;
 	}
 }
 
