--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -374,6 +374,7 @@
 	}
 	.model-select-box{
 		margin:0px;
+		display: none;
 	}
 	.container-fluid.noPadding,.container.noPadding{
 	  padding: 0px!important;
