--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -178,7 +178,7 @@
 	.side-one{
 		text-align: center;
 		font-weight: normal;
-		line-height: 32px;
+		line-height: 43px;
 		color: #898989;
 		font-size: 0.375rem;
 	}
@@ -219,12 +219,15 @@
 	.center-num{
 		width: 163px;
 	}
-	.goods-order{
+	.top-option{
+		display: none;
+	}
+	/*.goods-order{
 		right: 3px;
 	}
 	.goods-order span{
 		display: none;
-	}
+	}*/
 	.goods dl{
 		width: 49%;
 	}
@@ -345,7 +348,7 @@
 		margin-bottom: 0px;
 		position: relative;
     	top: -2px;
-    	height: 0.9375rem;
+    	height: 40px;
 	}
 	.side-sub{
 		width: 100%;
@@ -661,6 +664,10 @@
 	}
 	.help span i{
 		display: block;
+	}
+	#fh5co-main{
+		overflow: hidden;
+		padding-top: 0.3125rem;
 	}
 }
 
