--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -350,6 +350,13 @@
     	top: -2px;
     	height: 40px;
 	}
+	.nav-new li{
+		line-height: 42px!important;
+		height: 42px!important;
+	}
+	.side-sub li.active .icon{
+		display: none;
+	}
 	.side-sub{
 		width: 100%;
 	    padding: 0px;
@@ -361,16 +368,20 @@
         overflow-x:scroll;
         overflow-y:hidden;
 	}
+	.side-sub.nav-new{
+		height: 60px;
+	}
 	.side-sub li,.side-one{
 		float: left;
 		padding-right: 30px;
 	}
 	.side-sub li.active,.side-one.active{
 		background: #fff;
-	    padding:5px;
-	    top: 5px;
+	    padding:0px 8px!important;;
+	    top: 0px;
 	    margin-right: 30px;
 	}
+
 	.top-option{
 		margin-bottom: 0.3125rem;
 		padding-bottom: 1.46875rem;
@@ -515,6 +526,8 @@
 	}
 	.side-sub li.active a{
 		font-size:12px;
+		height: 62px;
+        line-height: 43px
 	}
 	/*.swiper-wraper{
 		width: 100%;
