--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -376,11 +376,7 @@
 		padding-right: 30px;
 	}
 	.side-sub li.active,.side-one.active{
-		background: #fff;
-	    padding:0px 8px!important;;
-	    top: 4px;
-	    margin-right: 30px;
-	    line-height: 36px!important;
+	    top: 0px!important;
 	}
 
 	.top-option{
@@ -527,7 +523,6 @@
 	}
 	.side-sub li.active a{
 		font-size:12px;
-        line-height: 35px
 	}
 	/*.swiper-wraper{
 		width: 100%;
