--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -537,6 +537,9 @@
 	.webSw,.s-contentWeb{
 		display: none;
 	}
+	.s-contentMobile{
+		display: block;
+	}
 	/*.swiperPro.swiper-container{
 		overflow: initial;
 	}
