--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -405,7 +405,7 @@
 	}
 	.designer_list{
 		margin-bottom: 0.625rem;
-        margin-top: 0px;
+        margin-top: 0.3125rem;
 	}
 	.designer_list .designer-img:nth-child(n){
     	padding-left: 0!important;
