--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -696,6 +696,10 @@
 	#fh5co-main{
 		overflow: hidden;
 		padding-top: 0.3125rem;
+		margin-top: 0px!important;
+	}
+	#fh5co-main:first-child{
+		margin-top: 0.3125rem;
 	}
 }
 
