--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -698,7 +698,7 @@
 		padding-top: 0.3125rem;
 		margin-top: 0px!important;
 	}
-	#fh5co-main:first-child{
+	#fh5co-main .column:first-child{
 		margin-top: 0.3125rem;
 	}
 }
