--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -698,7 +698,7 @@
 		padding-top: 0.3125rem;
 		margin-top: 0px!important;
 	}
-	#fh5co-main .column:first-child{
+	#fh5co-main .item:nth-child(1){
 		margin-top: 0.3125rem;
 	}
 }
