--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -699,7 +699,7 @@
 		margin-top: 0px!important;
 	}
 	#fh5co-main .item:nth-child(1){
-		margin-top: 0.3125rem;
+		margin-top: 0.3125rem!important;
 	}
 }
 
