--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -708,8 +708,10 @@
 	    background: #f6f6f6;
 	}
 	.sidebarNewWrap .sidebar{
-
+		overflow-x: scroll;
+        overflow-y: hidden;
 	    height: 66px;
+	    margin-right: -10px;
 	    padding-bottom: 2px!important;
 	    margin-bottom: 0px!important;
 	}
@@ -719,7 +721,6 @@
 	.sidebarNewWrap .user-center-left a{
 		float: left;
 	    margin-right: 20px;
-	    margin-top: 9px;
 	}
 }
 
