--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -722,6 +722,22 @@
 		float: left;
 	    margin-right: 20px;
 	}
+	.sidebarNewWrap  .user-center-left a.active:before{
+		display: none;
+	}
+	.sidebarNewWrap .user-center-left a.active{
+		top:0px;
+	}
+	.addressOne{
+		width: 100%;
+	}
+	.address-text{
+		margin-top: 15px;
+	}
+	.address-btn{
+		margin: 0px auto;
+       display: block;
+	}
 }
 
 @media (max-width: 500px) {
