--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -726,12 +726,12 @@
 		display: none;
 	}
 	.sidebarNewWrap .user-center-left a.active{
-		top:0px;
+		top:10px;
 	}
 	.addressOne{
 		width: 100%;
 	}
-	.address-text{
+	.mainNew{
 		margin-top: 15px;
 	}
 	.address-text .form-group{
@@ -741,6 +741,7 @@
 		margin: 0px auto;
        display: block;
 	}
+	
 }
 
 @media (max-width: 500px) {
