--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -741,7 +741,17 @@
 		margin: 0px auto;
        display: block;
 	}
-	
+	.discuss-order{
+		padding:30px 10px!important;
+		margin-bottom: 0px!important;
+	}
+	.discuss-item{
+		margin-bottom: 15px!important;
+	}
+	.discuss-img-list li{
+
+	}
+
 }
 
 @media (max-width: 500px) {
