--- a/yimi/public/assets/css/rem.css
+++ b/yimi/public/assets/css/rem.css
@@ -31,6 +31,9 @@ html{
 	padding-right:0.25641rem;
 	padding-top: 0.615385rem;
 }
+.designer{
+	min-height: 200px;
+}
 .designer dl,
 .designer dl dt,
 .designer dl dd,
