--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -698,9 +698,9 @@
 		padding-top: 0.3125rem;
 		margin-top: 0px!important;
 	}
-	#fh5co-main .item:nth-child(1){
+	/*#fh5co-main .item:nth-child(1){
 		margin-top: 0.3125rem!important;
-	}
+	}*/
 	/*登录后*/
 	.sidebarNewWrap{
 		overflow: hidden;
