--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -546,7 +546,7 @@ span.more{
 	border: solid 2px rgba(0,0,0,0.2);
     border-radius: 100%;
     overflow: hidden;
-    background:url("../img/userNew.png");
+    background:url("../img/userImg.jpg");
 }
 .infoImg img{
 	width: 100%;
