--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -745,6 +745,10 @@
 	.form-group label{
 		margin-bottom: 10px;
 	}
+	.gender{
+		margin-top: 8px;
+        margin-bottom: -20px;
+	}
 	.infohead{
 		margin-top: 10px;
 	}
