--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -527,7 +527,7 @@
      margin:0px!important;
      margin-bottom: 10px!important;
 	}
-	#fh5co-board .column:first-child{
+	#fh5co-board .column .item:first-child{
 		margin-top: 10px!important;
 	}
 	.side-sub li.active a{
@@ -1019,6 +1019,10 @@
 		width: 9.875rem;
 		margin-left: 0.3125rem;
 	}
+	.litteBannerUl{
+		padding-right:0px!important;
+		padding-left:0px!important;
+	}
 
 }
 @media (max-width: 375px) {
@@ -1043,5 +1047,8 @@
 	.d-detail-img div img{
 		width: 100%;
 		height: 100%;
+	}
+	.litteBannerUl{
+		padding-right:0px!important;
 	}
 }
