--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -1028,6 +1028,10 @@
 	.img2018_02 img,
 	.img2018_03 img{
 		width: 100%!important;
+		height: 100%!important;
+	}
+	.litteBanner{
+		max-height: 176px;
 	}
 	.litteBannerImg img{
 		width: 100%;
@@ -1037,16 +1041,18 @@
 	.img2018_03{
 		padding-right: 0px!important;
 	}
+
 	.index-title-ul{
 		width: 100%;
         margin-left: -12px;
 	}
 	.index-title-ul li.more{
-		margin-right: 0px;
+		margin-right: -10px;
 	}
 	.index-title-ul li{
 		width: 67px;
 	}
+
 }
 @media (max-width: 375px) {
 	.topSearch .top-search{
